[project]
name = "dbt-atproto-example"
version = "1.0.0"
description = "ATmosphere protocol utility functions for dbt - example"
authors = [{ name = "Georg Heiler", email = "dbt-atproto.tidiness350@passmail.net" }]
requires-python = "== 3.12"

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64", "win-64", "linux-aarch64"]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
prod = { features = ["main"], solve-group = "atproto-example" }
[tool.pixi.feature.main.dependencies]
[tool.pixi.feature.main.pypi-dependencies]
duckdb = ">=1.1.1,<2"
dbt-core = ">=1.8.0,<1.10"
dbt-atproto = { path = "../dbt-atproto", editable = true }

[tool.pixi.tasks]

[tool.pixi.tasks.run]
cmd = "dbt run"
description = "dbt run"
